# ideas-rest

./: .gitignore  ideas-rest.cabal  stack.yaml
src/: Links.hs  Main.hs  ResourceExercise.hs  Restful.hs
src/Domain/: Logic.hs
src/Domain/Algebra/: Boolean.hs  BooleanLaws.hs  Field.hs  FieldLaws.hs  Group.hs  GroupLaws.hs  Law.hs  SmartGroup.hs
src/Domain/Logic/: BuggyRules.hs  Consequence.hs  Examples.hs  Exercises.hs  Formula.hs  GeneralizedRules.hs  Generator.hs  InverseRules.hs  LinearProof.hs  Parser.hs  ProofDAG.hs  Proofs.hs  Rules.hs  Strategies.hs  Utils.hs  Views.hs
src/Domain/Logic/Axiomatic/: Buggy regels axiomatisch afleiden.docx  Buggy regels met parameters.docx  BuggyRules.hs  Examples.hs  Exercise.hs  MetaMathTheorems.hs  MoreAvailables.hs  Optimised.hs  ProofGenerator.hs  ProofGeneratorDAG.hs  Rules.hs  Statement.hs  Tests.hs  WithoutDeduction.hs  test.txt
src/Domain/Math/: Expr.hs
src/Domain/Math/Data/: DecimalFraction.hs  Interval.hs  MixedFraction.hs  OrList.hs  Polynomial.hs  PrimeFactors.hs  Primes.hs  Relation.hs  SquareRoot.hs  TestingClassLaws.hs  WithBool.hs
src/Domain/Math/Expr/: Clipboard.hs  Data.hs  Parser.hs  Symbols.hs  Views.hs
src/Ideas/: Rest.hs
src/Ideas/Rest/: API.hs  Links.hs
src/Ideas/Rest/HTML/: Docs.hs  Page.hs
src/Ideas/Rest/Resource/: API.hs  Derivation.hs  DomainReasoner.hs  Example.hs  Exercise.hs  Rule.hs  State.hs  Strategy.hs
