name:                   ideas-rest
version:                0.1
cabal-version:          >= 1.8.0.2
build-type:             Simple

Executable ideas-rest
  Main-is:           Main.hs
  ghc-options:       -Wall
  hs-source-dirs:    src
  Build-Depends:     
    base >= 4.2 && < 5,
    ideas == 1.5,
    containers,
    QuickCheck >= 2.8,
    lucid == 2.9.5,
    servant-lucid == 0.7.1,
    warp == 3.2.6,
    servant-server == 0.7,
    servant-docs == 0.7.1,
    servant-js == 0.7.1,
    text == 1.2.1.3,
    aeson == 0.11.1.4,
    parsec == 3.1.9
                     
  Other-modules:
    Restful